--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,15 @@
     width: 650px;
     height: 650px;
 }
+
+@keyframes ani {
+    0% {transform: scale(1);}
+   
+    100% {transform: scale(5);}
+}
+
+.btn-animation {
+    animation-name: ani;
+    animation-duration: 1s;
+    overflow: hidden;
+}
