--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,73 @@
     width: 650px;
     height: 650px;
 }
+main .show{
+    display: none;
+}
+
+.result-see{
+     position: absolute;
+     top:0; 
+     width: 100%;
+     height: 180%;
+     background-color: #44BDEE;
+     border-radius: 15px;
+     z-index: 9999;
+     display: flex;
+     color:white;
+     font-size: 35px;
+     cursor:pointer;
+     justify-content: center;
+     align-items: center;
+     -webkit-animation: pulsate-fwd 0.5s ease-in-out infinite both;
+	        animation: pulsate-fwd 0.5s ease-in-out infinite both;
+}
+.result-see-container{
+    position: relative;
+}
+
+.animation-result{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 20px;
+    width: 45%;
+    aspect-ratio: 1/1;
+    background-color: #44BDEE;
+    border-radius: 50%;
+    position: absolute;
+    -webkit-animation: pulsate-fwd 0.5s ease-in-out infinite both;
+	        animation: pulsate-fwd 0.5s ease-in-out infinite both;
+            z-index: 999999;
+}
+
+@-webkit-keyframes pulsate-fwd {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    50% {
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @keyframes pulsate-fwd {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    50% {
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  
